src/yini_test/cases/golden/strict/valid/strings/basic-quoted-strings.strict.yini
@yini strict

^ Strings
doubleQuoted = "hello world"
singleQuoted = 'hello world'
empty = ""

/END
