src/yini_test/cases/golden/strict/invalid/concatenation/linebreak-before-plus.strict.yini
@yini strict

^ Concat
message = "hello"
    + " world"

/END
